@@ -344,6 +344,25 @@
       <type>jar</type>      
       <classifier>jdk6</classifier>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.social</groupId>
+      <artifactId>spring-social-linkedin</artifactId>
+      <version>1.0.0.RC1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.social</groupId>
+      <artifactId>spring-social-facebook</artifactId>
+      <version>1.0.1.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-crypto</artifactId>
+      <version>3.1.0.RELEASE</version>
+    </dependency>
+
     <dependency>
       <groupId>org.forgerock.opendj</groupId>
       <artifactId>opendj-server</artifactId>
@@ -369,12 +388,14 @@
           <include>**/*.odp</include>
           <include>**/*.odt</include>
           <include>**/*.doc</include>
+          <include>**/*.tif</include>
           <include>**/*.docx</include>
           <include>**/*.zip</include>
           <include>**/*.tar.gz</include>
           <include>**/*.tar.bz2</include>
           <include>**/*.sql</include>
           <include>opendj/**</include>
+          <include>**/*.tif</include>
         </includes>
       </testResource>
       <testResource>
@@ -391,6 +412,7 @@
           <exclude>**/*.tar.bz2</exclude>
           <exclude>**/*.sql</exclude>
           <exclude>opendj/**</exclude>
+          <exclude>**/*.tif</exclude>
         </excludes>
       </testResource>      
     </testResources>
@@ -403,6 +425,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <skipTests>false</skipTests>
+		  <argLine>-XX:MaxPermSize=512m</argLine>
           <systemProperties>
             <property>
               <name>java.awt.headless</name>
